一些小改进

--- a/ly-search/src/main/resources/application.yml
+++ b/ly-search/src/main/resources/application.yml
@@ -1,12 +1,17 @@
 server:
   port: 8083
+
 spring:
   application:
     name: search-service
-  data:
-    elasticsearch:
-      cluster-name: my-application
-      cluster-nodes: 192.168.40.77:9200
+  elasticsearch:
+    rest:
+      uris: 192.168.40.77:9200
+  main:
+    # SpringCloud 2.1.0以上版本，将不再支持FeignClient的name属性相同的名字
+    # 即多个接口上的@FeignClient("相同的服务名")会报错，默认为false，设置为true，允许重名
+    allow-bean-definition-overriding: true
+
 eureka:
   client:
     service-url:
