--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>ly-common</module>
         <module>ly-upload</module>
         <module>ly-search</module>
+        <module>ly-goods-service</module>
     </modules>
     <packaging>pom</packaging>
 
