实现商品详情页，页面静态化

--- a/ly-goods-service/src/main/resources/application.yml
+++ b/ly-goods-service/src/main/resources/application.yml
@@ -10,6 +10,11 @@ spring:
     # SpringCloud 2.1.0以上版本，将不再支持FeignClient的name属性相同的名字
     # 即多个接口上的@FeignClient("相同的服务名")会报错，默认为false，设置为true，允许重名
     allow-bean-definition-overriding: true
+
+ly:
+  thymeleaf:
+    destPath: D:/Development/nginx-1.12.2/html/item
+
 eureka:
   client:
     service-url:
