--- a/ly-search/pom.xml
+++ b/ly-search/pom.xml
@@ -43,6 +43,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
 
+        <!--amqp-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
         <!--商品微服务-->
         <dependency>
             <groupId>com.leyou.service</groupId>
