--- a/ly-goods-service/src/main/resources/application.yml
+++ b/ly-goods-service/src/main/resources/application.yml
@@ -10,6 +10,9 @@ spring:
     # SpringCloud 2.1.0以上版本，将不再支持FeignClient的name属性相同的名字
     # 即多个接口上的@FeignClient("相同的服务名")会报错，默认为false，设置为true，允许重名
     allow-bean-definition-overriding: true
+  rabbitmq:
+    addresses: amqp://leyou:123456@192.168.40.77
+    virtual-host: /leyou
 
 ly:
   thymeleaf:
