Rabbitmq -- 添加短信验证微服务，当用户注册是获取验证码，通过rabbitMq调用服务

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,10 @@
         <module>ly-upload</module>
         <module>ly-search</module>
         <module>ly-goods-service</module>
+        <module>ly-user</module>
+        <module>ly-user/ly-user-interface</module>
+        <module>ly-user/ly-user-service</module>
+        <module>ly-sms-service</module>
     </modules>
     <packaging>pom</packaging>
 
