授权中心，通过JWT鉴权、RSA加密，登录接口改为认证接口/auth/accredit。登录成功，通过cookie携带token

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>ly-user/ly-user-interface</module>
         <module>ly-user/ly-user-service</module>
         <module>ly-sms-service</module>
+        <module>ly-auth-centor</module>
     </modules>
     <packaging>pom</packaging>
 
