--- a/ly-user/ly-user-interface/pom.xml
+++ b/ly-user/ly-user-interface/pom.xml
@@ -31,6 +31,10 @@
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
