--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>ly-sms-service</module>
         <module>ly-auth-centor</module>
         <module>ly-cart</module>
+        <module>ly-order</module>
     </modules>
     <packaging>pom</packaging>
 
