--- a/ly-order/src/main/resources/application.yml
+++ b/ly-order/src/main/resources/application.yml
@@ -63,3 +63,6 @@ ly:
     key: T6m9iK73b0kn9g5v426MKfHQH7X8rKwb
     connectTimeoutMs: 5000
     readTimeoutMs: 10000
+
+knife4j:
+  markdowns: classpath:markdown/*
